--- a/style.css
+++ b/style.css
@@ -7,3 +7,61 @@
 body{
     background-color:#8e70e6;
 }
+.container{
+    height:31.25em;
+    width:31.25em;
+    position:absolute;
+    transform:translate(-50%, -50%);
+    top:50%;
+    left:50%;
+}
+form{
+    width:23.75em;
+    height:18.75em;
+    background-color: #ffffff;
+    position:absolute;
+    top:calc(50% + 3.1em);
+    left:50%;
+    padding:0 3.1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 0.5em;
+}
+form label{
+    display:block;
+    margin-bottom:0.2em;
+    font-weight:600;
+    color:#2e0d30;
+}
+.panda-face{
+    height:7.5em;
+    width:8.4em;
+    background-color:#ffffff;
+    border: 0.18em solid #2e0d30;
+    position:absolute;
+    top:2em;
+    margin:auto;
+    left:0;
+    right:0;
+
+}
+.ear-l,
+.ear-r{
+    background-color: #3f3554;
+    height:2.5em;
+    width:2.81em;
+    border: 0.18em solid #2e0d30;
+    border-radius:2.5em 2.5em 0 0;
+    top:1.75em;
+    position:absolute;
+
+}
+.ear-l{
+    transform:rotate(-38deg);
+    left:10.75em;
+}
+.ear-r{
+    transform:rotate(38deg);
+    right:10.75em;
+}
