--- a/style.css
+++ b/style.css
@@ -117,3 +117,15 @@ top:4em;
 .eyeball-r{
     transform:rotate(-20deg);
 }
+.nose{
+    height:1em;
+    width:1em;
+    background-color: #3f3554;
+    position:absolute;
+    top:4.37;
+    margin:auto;
+    left:0;
+    right:0;
+    border-radius:1.2em 0 0 0.25em;
+    transform:rotate(45deg);
+}
