--- a/style.css
+++ b/style.css
@@ -129,3 +129,61 @@ top:4em;
     border-radius:1.2em 0 0 0.25em;
     transform:rotate(45deg);
 }
+.nose:before{
+    content:"";
+    position:absolute;
+    height:0.6em;
+    width:0.1em;
+    transform:rotate(-45deg);
+    top:0.75em;
+    left:1em;
+}
+.mouth,
+.mouth-before{
+    height:0.75em;
+    width:0.93em;
+    background-color: transparent;
+    position:absolute;
+    border-radius: 50%;
+    box-shadow:0 0.18em #3f3554;
+}
+.mouth{
+    top:5.31em;
+    left:3.12em;
+}
+.mouth:before{
+    content:"";
+    position:absolute;
+    left: 0.87em;
+}
+.hand-l,
+.hand-r{
+    background-color:#3f3554;
+    height:2.81em;
+    width:2.5em;
+    border:0.18em solid #2e0d30;
+    transition:1st all;
+    position:absolute;
+    top:8.4em;
+}
+.hand-l{
+    left:7.5em;
+}
+.hand-r{
+    right:7.5em;
+}
+.leg-l,
+.leg-r{
+    background-color:#3f3554;
+    height:3.12em;
+    width:3.12em;
+    border:0.18em solid #2e0d30;
+    position: absolute;
+    top:26.56em;
+}
+.leg-l{
+    left:10em;
+}
+.leg-r{
+    right:10em;
+}
